2006-10-19  Jakub Steiner <jimmac@ximian.com>

	* application-office: new scalable by Josef Vybiral and Lapo
		Calamandrei. Touched up an hacked up the missing sizes.

2006-10-19  Jakub Steiner <jimmac@ximian.com>

	* {16x16,22x22,24x24,32x32}/apps/accessories-calculator: added missing
		sizes
	* {22x22,24x24,32x32}/devices/input-keyboard*: tweaks by Lapo

2006-10-19  Jakub Steiner <jimmac@ximian.com>

	* scalable/apps/accessories-calculator.svg: calc from Lapo
	* 48x48/apps/accessories-calculator.png: removed. replaced by the
		above SVG

2006-10-19  Jakub Steiner <jimmac@ximian.com>

	* 32x32,scalable/actions/edit-cut: Lapo adds the missing sizes

2006-10-19  Jakub Steiner <jimmac@ximian.com>

	* preferences-desktop-font: missing app icon by Lapo

2006-10-19  Jakub Steiner <jimmac@ximian.com>

	* {16x16,22x22,24x24,32x32}/devices/media-tape: hacked up missing
		sizes.

2006-10-19  Jakub Steiner <jimmac@ximian.com>

	* scalable/devices/media-tape.svg: rather unexposed, but very
		spiffy icon from Lapo Calamandrei

2006-10-17  Rodney Dawes  <dobey@novell.com>

	* configure.in: Update for 2.17.1 release

2006-10-11  Jakub Steiner <jimmac@ximian.com>

	* object*: rotate and flip icons from lapo. Fixes bug #313387

2006-10-11  Jakub Steiner <jimmac@ximian.com>

	* 24x24/actions/go-home.png: forgot to update

2006-09-29  Jakub Steiner <jimmac@ximian.com>

	* scalable/actions/go-home.svg: linked offset is broken :/
		Converted to shape

2006-09-29  Jakub Steiner <jimmac@ximian.com>

	* scalable/devices/drive-harddisk: 
	* 32x32/devices/drive-harddisk: yet more shading fixes

2006-09-29  Jakub Steiner <jimmac@ximian.com>

	* network-server:
	* network-workgroup: visual updates by Lapo

2006-09-28  Jakub Steiner <jimmac@ximian.com>

	* 32x32/devices/video-display: add a missing size

2006-09-28  Jakub Steiner <jimmac@ximian.com>

	* 32x32/actions/go-top: flip arrow to be consistent with
		everything else.

2006-09-28  Jakub Steiner <jimmac@ximian.com>
