@@ -1,3 +1,11 @@
+2006-10-28  Jakub Steiner <jimmac@ximian.com>
+
+	* R 48x48/categories/applications-graphics.png
+	* R 48x48/categories/applications-multimedia.png
+	* R 48x48/categories/applications-office.png
+	* R 48x48/categories/preferences-desktop.png: removed old bitmaps.
+		Been replaced with SVGs.
+
 2006-10-19  Jakub Steiner <jimmac@ximian.com>
 
 	* application-office: new scalable by Josef Vybiral and Lapo
